k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: subway-monitor
  labels:
    name: subway-monitor
